Fixed background issue when container overflows

--- a/styles.css
+++ b/styles.css
@@ -17,17 +17,12 @@
   box-sizing: border-box;
 }
 
-/* html {
-  height: 100%;
-} */
-
 body {
   margin: 0;
   padding: 0;
-  /* min-height: 1200px; */
-  min-height: 100dvh;
-  background: var(--color-background) no-repeat;
-  background-size: cover;
+  min-height: 100vh;
+  background-image: var(--color-background);
+  background-attachment: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -71,8 +66,8 @@ details[open] .arrow {
   border-radius: 25px;
   width: 87%;
   box-shadow: 0 20px 70px -20px;
-  /* position: absolute;
-  top: 20%; */
+  position: absolute;
+  top: 20%;
 }
 
 .images {
@@ -95,5 +90,4 @@ details[open] .arrow {
 
 .accordion_faq {
   padding: 0 1.5rem 3rem 1.5rem;
-  overflow-y: visible;
 }
